<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTicketCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="@string/ticket_checkout"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="32sp"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/DatePicker"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:datePickerMode="spinner"
        android:padding="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="223dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNameFirst"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNameLast"
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/box"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="false" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTicketType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ticket_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/ticketPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textViewNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/number_of_pax"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextNumPax"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/payment_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonVisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visa" />

            <RadioButton
                android:id="@+id/radioButtonMasterCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mastercard" />

            <RadioButton
                android:id="@+id/radioButtonNets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nets" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBookNow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#03A9F4"
            android:text="@string/book_now" />

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/messagedisplay" />

    </LinearLayout>


</LinearLayout>
